Dev-RBI/src/objects/Project_Document_Status__c.object
<CustomObject>
    <fields>
        <fullName>Authorized_Signatory__c</fullName>
        <label>Authorized Signatory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Approval__c</fullName>
        <label>Date of Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <formula>Project_Document__r.Document_Description__c</formula>
        <label>Document Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Information_Matched__c</fullName>
        <label>Document Information Matched</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <formula>Project_Name__c</formula>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>Project_Document__r.Document_Type__c</formula>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List of Values</description>
        <label>Project Document</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Project Documents</relationshipLabel>
        <relationshipName>Project_Document_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Id</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Documents</relationshipLabel>
        <relationshipName>Project_Document_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Id__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provided_By_Bank__c</fullName>
        <label>Provided By Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provided_by_Developer__c</fullName>
        <label>Provided by Developer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Initiation_Date__c</fullName>
        <formula>Visit__r.CreatedDate</formula>
        <label>Report Initiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statutory_Approvals__c</fullName>
        <label>Statutory Approvals</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtained</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Search_Date__c</fullName>
        <label>Title Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <formula>TEXT(Visit__r.Visit_Report__c)</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store relationship with Visit</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipName>Project_Document_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Document</label>
    <nameField>
        <displayFormat>DOC-{0000000000}</displayFormat>
        <label>Document Status Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>